# rust-ms-oforms

./: Cargo.toml  README.md
.github/workflows/: pages.yaml
examples/: vba-form.rs
src/: lib.rs
src/common/: mod.rs  parser.rs
src/controls/: command_button.rs  mod.rs
src/controls/form/: mod.rs  parser.rs  stream.rs
src/controls/ole_site_concrete/: mod.rs  parser.rs  stream.rs
src/controls/user_form/: class_table.rs  designex.rs  mod.rs  parser.rs  stream.rs
src/controls/user_form/ole_site_concrete/: mod.rs  parser.rs
src/properties/: mod.rs  parser.rs  picture.rs
src/properties/color/: mod.rs  parser.rs
src/properties/font/: mod.rs  parser.rs
src/properties/string/: mod.rs
src/properties/types/: font.rs  mod.rs  parser.rs  picture.rs
src/properties/types/color/: mod.rs  parser.rs
src/properties/types/font/: mod.rs  parser.rs
src/properties/types/string/: mod.rs  parser.rs  stream.rs
