[package]
name = "ms-oforms"
version = "0.3.0-alpha2"
authors = ["Xiphoseer"]
edition = "2018"
description = "Parser and Datastructures for [MS-OFORMS]"
license = "MIT"
repository = "https://github.com/xiphoseer/rust-ms-oforms"
readme = "README.md"

[dependencies]
bitflags = "2.4.1"
nom-methods = "0.2"
nom = "5.0"
num-traits = "0.2"
num-derive = "0.2"
encoding = "0.2"
