[package]
name = "ms-oforms"
version = "0.3.0-alpha2"
authors = ["Xiphoseer"]
edition = "2018"
description = "Parser and Datastructures for [MS-OFORMS]"
license = "MIT"
repository = "https://github.com/xiphoseer/rust-ms-oforms"
readme = "README.md"

[dependencies]
bitflags = "2.4.1"
nom = "7"
num-traits = "0.2"
num-derive = "0.4.1"
encoding_rs = "0.8"
cfb = "0.9.0"
uuid = "1.5.0"

[dev-dependencies]
argh = "0.1.12"
